--- a/results.html
+++ b/results.html
@@ -21,18 +21,19 @@
             <td id="navbar-left-element">
                 <a href="index.html">Home</a>
                 <a href="symptoms.html">Symptoms</a>
+                <a href="results.html" id="navbar-current-page">Results</a>
                 <a href="about.html">About Us</a>
             </td>
 
-            <!--Center Elements-->
+            <!--Centered Elements-->
             <td id="navbar-center-element">
                 <b id = "header-title-tile">The Diagnosis Machine</b>
             </td>
 
             <!--Right-Aligned Elements-->
             <td id="navbar-right-element">
-                <b id="navbar-username">Username</b>
-                <b id="navbar-signout">Sign Out</b>
+                <b id="navbar-username"></b>
+                <b id="navbar-signout" title="Sign Out">Sign Out</b>
             </td>
 
         </tr>
@@ -44,53 +45,50 @@
 
         <div class="supplement-panel">
 
-            <p class="heading-big supp-heading">Food Research Calcium Complex</p> <!--inner text Dynamic-->
+            <p class="heading-big supp-heading"></p> <!--inner text Dynamic-->
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image"><!--image url Dynamic-->
+            <img src="" class="supp-image"><!--image url Dynamic-->
 
             <p class="flavor-text-medium-small supp-desc"> <!--Inner text Dynamic-->
-                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
             </p>
 
-            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p> <!--Price Dynamic-->
+            <p class="heading-medium supp-info"></p> <!--Price Dynamic-->
 
-            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a><!--a's href Dynamic--></p>
+            <p class="heading-medium supp-info"><a href="">External Link...</a><!--a's href Dynamic--></p>
 
         </div>
 
         <div class="supplement-panel">
 
-            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading"></p> <!--inner text Dynamic-->
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
+            <img src="" class="supp-image"><!--image url Dynamic-->
 
-            <p class="flavor-text-medium-small supp-desc">
-                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
+            <p class="flavor-text-medium-small supp-desc"> <!--Inner text Dynamic-->
             </p>
 
-            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
+            <p class="heading-medium supp-info"></p> <!--Price Dynamic-->
 
-            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
+            <p class="heading-medium supp-info"><a href="">External Link...</a><!--a's href Dynamic--></p>
 
         </div>
 
         <div class="supplement-panel">
 
-            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading"></p> <!--inner text Dynamic-->
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
+            <img src="" class="supp-image"><!--image url Dynamic-->
 
-            <p class="flavor-text-medium-small supp-desc">
-                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
+            <p class="flavor-text-medium-small supp-desc"> <!--Inner text Dynamic-->
             </p>
 
-            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
+            <p class="heading-medium supp-info"></p> <!--Price Dynamic-->
 
-            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
+            <p class="heading-medium supp-info"><a href="">External Link...</a><!--a's href Dynamic--></p>
 
         </div>
 
-        <div id="restart-button">
+        <div id="restart-button" title="Try again with other symptoms...">
 
             <img id="restart-img" src="images/restart-loop.png">
 
