Improved cancerous welcome text on landing page.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <b class="heading-big">Welcome!</b>
         <hr>
-        <p class="flavor-text-medium-small">It's no secret that good health is absolutely fundamental to living a happy and fulfilling life, particularly in our taxing modern world.</p>
-        <p class="flavor-text-medium-small">Why, then, does the quest toward good health seem to be an almost universal struggle?</p>
-        <p class="heading-medium">Our app, The Diagnosis Machine, is here to sweep aside all the confusion!</p>
+        <p class="flavor-text-medium-small">Good health is <i>absolutely fundamental</i> to living a happy and fulfilling life, particularly in our taxing modern world.</p>
+        <p class="flavor-text-medium-small">Why, then, does the quest toward good health seem to be an near-universal struggle?</p>
+        <p class="heading-medium">Our app, The Diagnosis Machine, is here help!</p>
         <p class="flavor-text-medium-small">Select your symptoms from a list of common health afflictions, and we will provide you a cohort of three affordable, effective supplements best-tailored to your needs!</p>
         <hr>
         <p class="flavor-text-small">If you have an account, please enter your existing username and password to resume.</p>
