Fixed embarrassing typos on landing page.

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
         <b class="heading-big">Welcome!</b>
         <hr>
-        <p class="flavor-text-medium-small">Good health is <i>absolutely fundamental</i> to living a happy and fulfilling life, particularly in our taxing modern world.</p>
-        <p class="flavor-text-medium-small">Why, then, does the quest toward good health seem to be an near-universal struggle?</p>
-        <p class="heading-medium">Our app, The Diagnosis Machine, is here help!</p>
-        <p class="flavor-text-medium-small">Select your symptoms from a list of common health afflictions, and we will provide you a cohort of three affordable, effective supplements best-tailored to your needs!</p>
+        <p class="flavor-text-medium-small">Good health is <i>absolutely fundamental</i> to living a happy and fulfilling life, particularly for those with taxing modern lifestyles.</p>
+        <p class="flavor-text-medium-small">Why, then, does the quest toward good health seem to be a near-universal struggle?</p>
+        <p class="heading-medium">Our app, The Diagnosis Machine, is here to help!</p>
+        <p class="flavor-text-medium-small">Select your symptoms from a list of common health afflictions, and we will provide you with a cohort of three affordable, effective supplements best-tailored to your needs!</p>
         <hr>
         <p class="flavor-text-small">If you have an account, please enter your existing username and password to resume.</p>
         <p class="flavor-text-small">If you DO NOT have an account, please enter a new username and password to begin.</p>
